# vFL

./: .gitignore  COMMITS.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  IMPL.md  Makefile  README.md  ROADMAP.md  codecov.yml  pyproject.toml  zensical.toml
.claude/: skill-context.md
.claude/skills/_shared/: hate-words.md
.claude/skills/aj-audit/: SKILL.md
.claude/skills/aj-auto-commit/: SKILL.md
.claude/skills/aj-ci-audit/: SKILL.md
.claude/skills/aj-deslop/: SKILL.md
.claude/skills/aj-docs-site/: SKILL.md
.claude/skills/aj-docsync/: SKILL.md
.claude/skills/aj-reslop/: SKILL.md
.claude/skills/audit/: SKILL.md
.claude/skills/auto-commit/: SKILL.md
.claude/skills/ci-audit/: SKILL.md
.claude/skills/deslop/: SKILL.md
.claude/skills/docs-site/: SKILL.md
.claude/skills/docsync/: SKILL.md
.claude/skills/reslop/: SKILL.md
.github/workflows/: docs.yml  nightly.yml  tests.yml
docs/: api.md  architecture.md  attacks.md  benchmarks.md  cli.md  configuration.md  convergence.md  getting-started.md  index.md  skills.md  strategies.md  style.css  sweep-spec.md
examples/: cifar10_fedavg_dirichlet.py  mnist_fedavg.py  mnist_fedprox_dirichlet.py  mnist_label_flipping_vs_robust.py  mnist_multikrum_vs_byzantine.py
experiments/: attack_matrix.toml  attack_robustness.toml  strategy_baselines.toml
overrides/: main.html
python/velocity/: __init__.py  _core.pyi  attacks.py  cli.py  data_attacks.py  datasets.py  db.py  flows.py  mcp_app.py  memory.py  partition.py  server.py  strategy.py  sweep.py  training.py
scripts/: dev.py
tests/: conftest.py  strategy_reference.py  test_aggregation_properties.py  test_attacks.py  test_cli.py  test_convergence.py  test_data_attacks.py  test_datasets.py  test_db.py  test_flows.py  test_mcp_cache_stability.py  test_memory.py  test_partition.py  test_server.py  test_strategy.py  test_sweep.py
tests/bench/: test_round_speed.py
vfl-core/: Cargo.toml
vfl-core/benches/: aggregate.rs
vfl-core/src/: lib.rs  orchestrator.rs  security.rs  strategy.rs
vfl-core/tests/: properties.rs
