[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "velocity-fl"
version = "0.1.0"
description = "The 'uv' of Federated Learning — high-performance, Rust-backed FL orchestration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prefect>=3.0",
    "pydantic>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.0",
    "safetensors>=0.4",
]
torch = [
    "torch>=2.0",
]
all = [
    "velocity-fl[hf,torch]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "zensical",
]

[project.scripts]
velocity = "velocity.cli:app"

[tool.maturin]
python-source = "python"
module-name = "velocity._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
