[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "velocity-fl"
version = "0.1.0"
description = "The 'uv' of Federated Learning — high-performance, Rust-backed FL orchestration"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prefect>=3.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "tomli>=2.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
hf = [
    "transformers>=4.40",
    "peft>=0.10",
    # datasets 2.x pulls ancient pyarrow/pandas APIs that break against
    # modern transitive pins. 3.x is the current schema baseline.
    "datasets>=3.0,<4.0",
    "safetensors>=0.4",
]
torch = [
    "torch>=2.0",
    "torchvision>=0.15",
]
# Agentic surface: FastMCP server + Prefab UIs. Requires Python 3.10+.
# Pinned exactly — Prefab is pre-1.0 and minor versions can break.
agent = [
    "fastmcp>=2.0 ; python_version >= '3.10'",
    "prefab-ui==0.15.0 ; python_version >= '3.10'",
]
all = [
    "velocity-fl[hf,torch]",
]

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "zensical",
    "fastmcp>=2.0 ; python_version >= '3.10'",
]

[project.scripts]
velocity = "velocity.cli:app"

[tool.maturin]
manifest-path = "vfl-core/Cargo.toml"
python-source = "python"
module-name = "velocity._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Benches live under tests/bench/ and are collected only when explicitly
# pointed at (e.g. `pytest tests/bench/`); normal `pytest` skips them so
# the default test run stays fast. The rest of this list restores pytest's
# built-in defaults (which `norecursedirs` replaces rather than extends)
# so hypothesis, build artifacts, and caches aren't collected.
norecursedirs = [
    "bench",
    ".hypothesis",
    ".git",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "node_modules",
    "__pycache__",
    "*.egg-info",
]

[tool.coverage.run]
source = ["velocity"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ty.src]
include = ["python"]

[tool.ty.analysis]
# Torch + Hugging Face `datasets` are optional extras (`velocity-fl[torch,hf]`);
# baseline `uv sync` prunes them. tomli is a conditional dep (python_version < '3.11');
# not installed on newer runners. When these ARE installed, ty resolves real types.
allowed-unresolved-imports = [
    "torch",
    "torch.**",
    "torchvision",
    "torchvision.**",
    "datasets",
    "datasets.**",
    "tomli",
]